--- a/index.html
+++ b/index.html
@@ -9,17 +9,98 @@
 
     <link rel="stylesheet" href="styles/style..css">
 </head>
-<body>
-
-    <section class="home">
-
+<body class="font-poppins">
+<main  class="min-h-screen bg-[#010313] bg-[url(images/background.png)] bg-no-repeat bg-center">
+    <!-- Home screen -->
+    <section id="home-screen" class="min-h-screen text-white flex justify-center items-center ">
+    <div class="flex flex-col items-center gap-10">
+        <h1 class="text-8xl font-anton">ALPHABET CLASH</h1>
+        <p> Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
+        <button onclick="play()" class="btn bg-white text-black">Play Now</button>
+    </div>
     </section>
-    <section class="play-graound">
-
+    <!-- playground start -->
+    <section id="play-graound"  class="hidden">
+        <div class="flex flex-col items-center gap-20 pt-20">
+            <!-- screen -->
+            <div class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#010313CC] bg-[#FFFFFFB3] ">
+                <div class="flex justify-center">
+                    <p class="bg-[#2F2941] px-6 pb-4 rounded-b-xl text-[#FFFFFFB3] ">Don't watch keyboard  while playing...</p>
+                </div>
+                <div class="flex justify-center items-center h-full ">
+                    <p id="current-alphabet" class="text-[#010313] text-8xl font-bold uppercase">Y</p>
+                </div> 
+            </div>
+             <!-- keyboard start-->
+           <div>
+            <div class="my-1 flex w-full justify-center gap-1">
+                <kbd id="q" class="kbd">q</kbd>
+                <kbd id="q" class="kbd">w</kbd>
+                <kbd id="q" class="kbd">e</kbd>
+                <kbd id="q" class="kbd">r</kbd>
+                <kbd id="q" class="kbd">t</kbd>
+                <kbd id="q" class="kbd">y</kbd>
+                <kbd id="q" class="kbd">u</kbd>
+                <kbd id="q" class="kbd">i</kbd>
+                <kbd id="q" class="kbd">o</kbd>
+                <kbd id="q" class="kbd">p</kbd>
+              </div>
+              <div class="my-1 flex w-full justify-center gap-1">
+                <kbd id="a" class="kbd">a</kbd>
+                <kbd id="s" class="kbd">s</kbd>
+                <kbd id="d" class="kbd">d</kbd>
+                <kbd id="f" class="kbd">f</kbd>
+                <kbd id="g" class="kbd">g</kbd>
+                <kbd id="h" class="kbd">h</kbd>
+                <kbd id="j" class="kbd">j</kbd>
+                <kbd id="k" class="kbd">k</kbd>
+                <kbd id="l" class="kbd">l</kbd>
+              </div>
+              <div class="my-1 flex w-full justify-center gap-1">
+                <kbd id="z" class="kbd">z</kbd>
+                <kbd id="x" class="kbd">x</kbd>
+                <kbd id="c" class="kbd">c</kbd>
+                <kbd id="v" class="kbd">v</kbd>
+                <kbd id="b" class="kbd">b</kbd>
+                <kbd id="n" class="kbd">n</kbd>
+                <kbd id="m" class="kbd">m</kbd>
+                <kbd id="/" class="kbd">/</kbd>
+              </div>
+           </div>
+              <!-- keyboard end-->
+              <!-- life score -->
+               <div class="flex justify-between w-3/4">
+                <button class="btn rounded-full bg-purple-500 text-white px-4">
+                    Life
+                    <img src="images/heart.svg" alt="">
+                    <span id="current-life">3</span>
+                  </button>
+                  <button class="btn rounded-full bg-purple-700 text-white px-4">
+                    Score
+                    <img src="images/doller.svg" alt="">
+                    <span id="current-score">0</span>
+                  </button>
+               </div>
+        </div>
     </section>
-    <section class="score">
-
+     <!-- playground end -->
+      <!-- final score start -->
+    <section id="final-score" class="flex justify-center items-center min-h-screen hidden">
+        <div class="text-white text-center space-y-6 bg-[#FFFFFF33] p-4 rounded-lg">
+            <h4 class="text-3xl">Game Over!</h4>
+            <h1 class="text-6xl">
+                <span class="font-extrabold">Score :</span>
+                <span id="last-score">14</span>
+            </h1>
+            <button onclick="play()" class="btn">Play Again</button>
+            <p>Practice will make you a Pro</p>
+        </div>
     </section>
+     <!-- final score end -->
+</main>
     
+
+<script src="scripts/utility.js"></script>
+<script src="scripts/index.js"></script>
 </body>
 </html>
